[package]
name = "pochta"
version = "0.1.4"
edition = "2018"
description = "Addressable channel registry"
readme = "README.md"
repository = "https://github.com/DoumanAsh/pochta"
license = "BSL-1.0"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]
categories = ["asynchronous", "concurrency"]
